# public/swagger/swagger.yaml
@@ -333,7 +333,7 @@ paths:
   '/sections/{section_id}/lessons/{lesson_id}/questions/{question_id}/answers':
     get:
       tags:
-        - questions
+        - answers
       summary: 'Lista todas as respostas de uma questão'
       operationId: GetQuestionAnswers
       parameters:
@@ -386,7 +386,7 @@ paths:
           description: ...
     post:
       tags:
-        - questions
+        - answers
       summary: 'Cria a resposta de uma questão'
       operationId: PostQuestionAnswer
       parameters:
@@ -427,7 +427,7 @@ paths:
   '/sections/{section_id}/lessons/{lesson_id}/questions/{question_id}/answers/{answer_id}':
     get:
       tags:
-        - questions
+        - answers
       summary: 'Lista a resposta de uma questão'
       operationId: GetQuestionAnswer
       parameters:
@@ -464,7 +464,7 @@ paths:
           description: ...
     put:
       tags:
-        - questions
+        - answers
       summary: 'Atualiza a resposta de uma questão'
       operationId: PutQuestionAnswer
       parameters:
@@ -511,7 +511,7 @@ paths:
           apiToken: []
     delete:
       tags:
-        - questions
+        - answers
       summary: 'Apaga a resposta de uma questão'
       operationId: DeleteQuestionAnswer
       parameters:
@@ -670,6 +670,9 @@ paths:
       responses:
         '200':
           description: ...
+      security:
+        -
+          apiToken: []
     put:
       tags:
         - questions
